[package]
name = "event_sync"
license = "MIT"
authors = ["Link <CirnoStrongest9909@hotmail.com>"]
readme = "README.md"
repository = "https://github.com/LinkTheDot/Event_Sync"
version = "0.1.2"
edition = "2021"
description = "A crate that can be used to synchronize events to only occur between fixed gaps of time."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
